
classDiagram
    class Main {
        +url: str
        +run() None
    }
    class SQLInjectionTester {
        +target_url: str
        +test_injection() dict
    }
    class XSSAttackTester {
        +target_url: str
        +test_xss() dict
    }
    class SSRFExploiter {
        +target_url: str
        +exploit_ssrf() dict
    }
    Main --> SQLInjectionTester
    Main --> XSSAttackTester
    Main --> SSRFExploiter
